# serializer version: 1
# name: test_parse_codec_option[mov-muxer]
  list([
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movflags', type='flags', flags='E..........', help='MOV muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='rtphint', help='Add RTP hint tracks', flags='E..........', value='rtphint'), FFMpegOptionChoice(name='empty_moov', help='Make the initial moov atom empty', flags='E..........', value='empty_moov'), FFMpegOptionChoice(name='frag_keyframe', help='Fragment at video keyframes', flags='E..........', value='frag_keyframe'), FFMpegOptionChoice(name='frag_every_frame', help='Fragment at every frame', flags='E..........', value='frag_every_frame'), FFMpegOptionChoice(name='separate_moof', help='Write separate moof/mdat atoms for each track', flags='E..........', value='separate_moof'), FFMpegOptionChoice(name='frag_custom', help='Flush fragments on caller requests', flags='E..........', value='frag_custom'), FFMpegOptionChoice(name='isml', help='Create a live smooth streaming feed (for pushing to a publishing point)', flags='E..........', value='isml'), FFMpegOptionChoice(name='faststart', help='Run a second pass to put the index (moov atom) at the beginning of the file', flags='E..........', value='faststart'), FFMpegOptionChoice(name='omit_tfhd_offset', help='Omit the base data offset in tfhd atoms', flags='E..........', value='omit_tfhd_offset'), FFMpegOptionChoice(name='disable_chpl', help='Disable Nero chapter atom', flags='E..........', value='disable_chpl'), FFMpegOptionChoice(name='default_base_moof', help='Set the default-base-is-moof flag in tfhd atoms', flags='E..........', value='default_base_moof'), FFMpegOptionChoice(name='dash', help='Write DASH compatible fragmented MP4', flags='E..........', value='dash'), FFMpegOptionChoice(name='cmaf', help='Write CMAF compatible fragmented MP4', flags='E..........', value='cmaf'), FFMpegOptionChoice(name='frag_discont', help='Signal that the next fragment is discontinuous from earlier ones', flags='E..........', value='frag_discont'), FFMpegOptionChoice(name='delay_moov', help='Delay writing the initial moov until the first fragment is cut, or until the first fragment flush', flags='E..........', value='delay_moov'), FFMpegOptionChoice(name='global_sidx', help='Write a global sidx index at the start of the file', flags='E..........', value='global_sidx'), FFMpegOptionChoice(name='skip_sidx', help='Skip writing of sidx atom', flags='E..........', value='skip_sidx'), FFMpegOptionChoice(name='write_colr', help='Write colr atom even if the color info is unspecified (Experimental, may be renamed or changed, do not use from scripts)', flags='E..........', value='write_colr'), FFMpegOptionChoice(name='prefer_icc', help='If writing colr atom prioritise usage of ICC profile if it exists in stream packet side data', flags='E..........', value='prefer_icc'), FFMpegOptionChoice(name='write_gama', help='Write deprecated gama atom', flags='E..........', value='write_gama'), FFMpegOptionChoice(name='use_metadata_tags', help='Use mdta atom for metadata.', flags='E..........', value='use_metadata_tags'), FFMpegOptionChoice(name='skip_trailer', help='Skip writing the mfra/tfra/mfro trailer for fragmented files', flags='E..........', value='skip_trailer'), FFMpegOptionChoice(name='negative_cts_offsets', help='Use negative CTS offsets (reducing the need for edit lists)', flags='E..........', value='negative_cts_offsets'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='moov_size', type='int', flags='E..........', help='maximum moov size so it can be placed at the begin (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='rtpflags', type='flags', flags='E..........', help='RTP muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='latm', help='Use MP4A-LATM packetization instead of MPEG4-GENERIC for AAC', flags='E..........', value='latm'), FFMpegOptionChoice(name='rfc2190', help='Use RFC 2190 packetization instead of RFC 4629 for H.263', flags='E..........', value='rfc2190'), FFMpegOptionChoice(name='skip_rtcp', help="Don't send RTCP sender reports", flags='E..........', value='skip_rtcp'), FFMpegOptionChoice(name='h264_mode0', help='Use mode 0 for H.264 in RTP', flags='E..........', value='h264_mode0'), FFMpegOptionChoice(name='send_bye', help='Send RTCP BYE packets when finishing', flags='E..........', value='send_bye'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='skip_iods', type='boolean', flags='E..........', help='Skip writing iods atom. (default true)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_audio_profile', type='int', flags='E..........', help='iods audio profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_video_profile', type='int', flags='E..........', help='iods video profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_duration', type='int', flags='E..........', help='Maximum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='min_frag_duration', type='int', flags='E..........', help='Minimum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_size', type='int', flags='E..........', help='Maximum fragment size (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='ism_lookahead', type='int', flags='E..........', help='Number of lookahead entries for ISM files (from 0 to 255) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='video_track_timescale', type='int', flags='E..........', help='set timescale of all video tracks (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='brand', type='string', flags='E..........', help='Override major brand', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_editlist', type='boolean', flags='E..........', help='use edit list (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='fragment_index', type='int', flags='E..........', help='Fragment number of the next fragment (from 1 to INT_MAX) (default 1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='mov_gamma', type='float', flags='E..........', help='gamma value for gama atom (from 0 to 10) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_interleave', type='int', flags='E..........', help='Interleave samples within fragments (max number of consecutive samples, lower is tighter interleaving, but with more overhead) (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_scheme', type='string', flags='E..........', help='Configures the encryption scheme, allowed values are none, cenc-aes-ctr', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_key', type='binary', flags='E..........', help='The media encryption key (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_kid', type='binary', flags='E..........', help='The media encryption key identifier (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_stream_ids_as_track_ids', type='boolean', flags='E..........', help='use stream ids as track ids (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_btrt', type='boolean', flags='E..........', help='force or disable writing btrt (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_tmcd', type='boolean', flags='E..........', help='force or disable writing tmcd (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_prft', type='int', flags='E..........', help='Write producer reference time box with specified time source (from 0 to 2) (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='wallclock', help='', flags='E..........', value='1'), FFMpegOptionChoice(name='pts', help='', flags='E..........', value='2'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='empty_hdlr_name', type='boolean', flags='E..........', help='write zero-length name string in hdlr atoms within mdia and minf atoms (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movie_timescale', type='int', flags='E..........', help='set movie timescale (from 1 to INT_MAX) (default 1000)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[mp3-demuxer]
  list([
    FFMpegAVOption(section='mp3 AVOptions:', name='usetoc', type='boolean', flags='.D.........', help='use table of contents (default false)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[mp4-muxer]
  list([
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movflags', type='flags', flags='E..........', help='MOV muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='rtphint', help='Add RTP hint tracks', flags='E..........', value='rtphint'), FFMpegOptionChoice(name='empty_moov', help='Make the initial moov atom empty', flags='E..........', value='empty_moov'), FFMpegOptionChoice(name='frag_keyframe', help='Fragment at video keyframes', flags='E..........', value='frag_keyframe'), FFMpegOptionChoice(name='frag_every_frame', help='Fragment at every frame', flags='E..........', value='frag_every_frame'), FFMpegOptionChoice(name='separate_moof', help='Write separate moof/mdat atoms for each track', flags='E..........', value='separate_moof'), FFMpegOptionChoice(name='frag_custom', help='Flush fragments on caller requests', flags='E..........', value='frag_custom'), FFMpegOptionChoice(name='isml', help='Create a live smooth streaming feed (for pushing to a publishing point)', flags='E..........', value='isml'), FFMpegOptionChoice(name='faststart', help='Run a second pass to put the index (moov atom) at the beginning of the file', flags='E..........', value='faststart'), FFMpegOptionChoice(name='omit_tfhd_offset', help='Omit the base data offset in tfhd atoms', flags='E..........', value='omit_tfhd_offset'), FFMpegOptionChoice(name='disable_chpl', help='Disable Nero chapter atom', flags='E..........', value='disable_chpl'), FFMpegOptionChoice(name='default_base_moof', help='Set the default-base-is-moof flag in tfhd atoms', flags='E..........', value='default_base_moof'), FFMpegOptionChoice(name='dash', help='Write DASH compatible fragmented MP4', flags='E..........', value='dash'), FFMpegOptionChoice(name='cmaf', help='Write CMAF compatible fragmented MP4', flags='E..........', value='cmaf'), FFMpegOptionChoice(name='frag_discont', help='Signal that the next fragment is discontinuous from earlier ones', flags='E..........', value='frag_discont'), FFMpegOptionChoice(name='delay_moov', help='Delay writing the initial moov until the first fragment is cut, or until the first fragment flush', flags='E..........', value='delay_moov'), FFMpegOptionChoice(name='global_sidx', help='Write a global sidx index at the start of the file', flags='E..........', value='global_sidx'), FFMpegOptionChoice(name='skip_sidx', help='Skip writing of sidx atom', flags='E..........', value='skip_sidx'), FFMpegOptionChoice(name='write_colr', help='Write colr atom even if the color info is unspecified (Experimental, may be renamed or changed, do not use from scripts)', flags='E..........', value='write_colr'), FFMpegOptionChoice(name='prefer_icc', help='If writing colr atom prioritise usage of ICC profile if it exists in stream packet side data', flags='E..........', value='prefer_icc'), FFMpegOptionChoice(name='write_gama', help='Write deprecated gama atom', flags='E..........', value='write_gama'), FFMpegOptionChoice(name='use_metadata_tags', help='Use mdta atom for metadata.', flags='E..........', value='use_metadata_tags'), FFMpegOptionChoice(name='skip_trailer', help='Skip writing the mfra/tfra/mfro trailer for fragmented files', flags='E..........', value='skip_trailer'), FFMpegOptionChoice(name='negative_cts_offsets', help='Use negative CTS offsets (reducing the need for edit lists)', flags='E..........', value='negative_cts_offsets'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='moov_size', type='int', flags='E..........', help='maximum moov size so it can be placed at the begin (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='rtpflags', type='flags', flags='E..........', help='RTP muxer flags (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='latm', help='Use MP4A-LATM packetization instead of MPEG4-GENERIC for AAC', flags='E..........', value='latm'), FFMpegOptionChoice(name='rfc2190', help='Use RFC 2190 packetization instead of RFC 4629 for H.263', flags='E..........', value='rfc2190'), FFMpegOptionChoice(name='skip_rtcp', help="Don't send RTCP sender reports", flags='E..........', value='skip_rtcp'), FFMpegOptionChoice(name='h264_mode0', help='Use mode 0 for H.264 in RTP', flags='E..........', value='h264_mode0'), FFMpegOptionChoice(name='send_bye', help='Send RTCP BYE packets when finishing', flags='E..........', value='send_bye'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='skip_iods', type='boolean', flags='E..........', help='Skip writing iods atom. (default true)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_audio_profile', type='int', flags='E..........', help='iods audio profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='iods_video_profile', type='int', flags='E..........', help='iods video profile atom. (from -1 to 255) (default -1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_duration', type='int', flags='E..........', help='Maximum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='min_frag_duration', type='int', flags='E..........', help='Minimum fragment duration (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_size', type='int', flags='E..........', help='Maximum fragment size (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='ism_lookahead', type='int', flags='E..........', help='Number of lookahead entries for ISM files (from 0 to 255) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='video_track_timescale', type='int', flags='E..........', help='set timescale of all video tracks (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='brand', type='string', flags='E..........', help='Override major brand', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_editlist', type='boolean', flags='E..........', help='use edit list (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='fragment_index', type='int', flags='E..........', help='Fragment number of the next fragment (from 1 to INT_MAX) (default 1)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='mov_gamma', type='float', flags='E..........', help='gamma value for gama atom (from 0 to 10) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='frag_interleave', type='int', flags='E..........', help='Interleave samples within fragments (max number of consecutive samples, lower is tighter interleaving, but with more overhead) (from 0 to INT_MAX) (default 0)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_scheme', type='string', flags='E..........', help='Configures the encryption scheme, allowed values are none, cenc-aes-ctr', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_key', type='binary', flags='E..........', help='The media encryption key (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='encryption_kid', type='binary', flags='E..........', help='The media encryption key identifier (hex)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='use_stream_ids_as_track_ids', type='boolean', flags='E..........', help='use stream ids as track ids (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_btrt', type='boolean', flags='E..........', help='force or disable writing btrt (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_tmcd', type='boolean', flags='E..........', help='force or disable writing tmcd (default auto)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='write_prft', type='int', flags='E..........', help='Write producer reference time box with specified time source (from 0 to 2) (default 0)', min=None, max=None, default=None, choices=(FFMpegOptionChoice(name='wallclock', help='', flags='E..........', value='1'), FFMpegOptionChoice(name='pts', help='', flags='E..........', value='2'))),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='empty_hdlr_name', type='boolean', flags='E..........', help='write zero-length name string in hdlr atoms within mdia and minf atoms (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='mov/mp4/tgp/psp/tg2/ipod/ismv/f4v muxer AVOptions:', name='movie_timescale', type='int', flags='E..........', help='set movie timescale (from 1 to INT_MAX) (default 1000)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codec_option[wav-demuxer]
  list([
    FFMpegAVOption(section='WAV demuxer AVOptions:', name='ignore_length', type='boolean', flags='.D.........', help='Ignore length (default false)', min=None, max=None, default=None, choices=()),
    FFMpegAVOption(section='WAV demuxer AVOptions:', name='max_size', type='int', flags='.D.........', help='max size of single packet (from 1024 to 4.1943e+06) (default 4096)', min=None, max=None, default=None, choices=()),
  ])
# ---
# name: test_parse_codecs_help_text[demuxers]
  list([
    FFMpegFormat(name='3dostr', flags='D ', description='3DO STR', options=()),
    FFMpegFormat(name='4xm', flags='D ', description='4X Technologies', options=()),
    FFMpegFormat(name='aa', flags='D ', description='Audible AA format files', options=()),
    FFMpegFormat(name='aac', flags='D ', description='raw ADTS AAC (Advanced Audio Coding)', options=()),
    FFMpegFormat(name='aax', flags='D ', description='CRI AAX', options=()),
    FFMpegFormat(name='ac3', flags='D ', description='raw AC-3', options=()),
    FFMpegFormat(name='ac4', flags='D ', description='raw AC-4', options=()),
    FFMpegFormat(name='ace', flags='D ', description='tri-Ace Audio Container', options=()),
    FFMpegFormat(name='acm', flags='D ', description='Interplay ACM', options=()),
    FFMpegFormat(name='act', flags='D ', description='ACT Voice file format', options=()),
    FFMpegFormat(name='adf', flags='D ', description='Artworx Data Format', options=()),
    FFMpegFormat(name='adp', flags='D ', description='ADP', options=()),
    FFMpegFormat(name='ads', flags='D ', description='Sony PS2 ADS', options=()),
    FFMpegFormat(name='adx', flags='D ', description='CRI ADX', options=()),
    FFMpegFormat(name='aea', flags='D ', description='MD STUDIO audio', options=()),
    FFMpegFormat(name='afc', flags='D ', description='AFC', options=()),
    FFMpegFormat(name='aiff', flags='D ', description='Audio IFF', options=()),
    FFMpegFormat(name='aix', flags='D ', description='CRI AIX', options=()),
    FFMpegFormat(name='alaw', flags='D ', description='PCM A-law', options=()),
    FFMpegFormat(name='alias_pix', flags='D ', description='Alias/Wavefront PIX image', options=()),
    FFMpegFormat(name='alp', flags='D ', description='LEGO Racers ALP', options=()),
    FFMpegFormat(name='alsa', flags='D ', description='ALSA audio input', options=()),
    FFMpegFormat(name='amr', flags='D ', description='3GPP AMR', options=()),
    FFMpegFormat(name='amrnb', flags='D ', description='raw AMR-NB', options=()),
    FFMpegFormat(name='amrwb', flags='D ', description='raw AMR-WB', options=()),
    FFMpegFormat(name='anm', flags='D ', description='Deluxe Paint Animation', options=()),
    FFMpegFormat(name='apac', flags='D ', description='raw APAC', options=()),
    FFMpegFormat(name='apc', flags='D ', description='CRYO APC', options=()),
    FFMpegFormat(name='ape', flags='D ', description="Monkey's Audio", options=()),
    FFMpegFormat(name='apm', flags='D ', description='Ubisoft Rayman 2 APM', options=()),
    FFMpegFormat(name='apng', flags='D ', description='Animated Portable Network Graphics', options=()),
    FFMpegFormat(name='aptx', flags='D ', description='raw aptX', options=()),
    FFMpegFormat(name='aptx_hd', flags='D ', description='raw aptX HD', options=()),
    FFMpegFormat(name='aqtitle', flags='D ', description='AQTitle subtitles', options=()),
    FFMpegFormat(name='argo_asf', flags='D ', description='Argonaut Games ASF', options=()),
    FFMpegFormat(name='argo_brp', flags='D ', description='Argonaut Games BRP', options=()),
    FFMpegFormat(name='argo_cvg', flags='D ', description='Argonaut Games CVG', options=()),
    FFMpegFormat(name='asf', flags='D ', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegFormat(name='asf_o', flags='D ', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegFormat(name='ass', flags='D ', description='SSA (SubStation Alpha) subtitle', options=()),
    FFMpegFormat(name='ast', flags='D ', description='AST (Audio Stream)', options=()),
    FFMpegFormat(name='au', flags='D ', description='Sun AU', options=()),
    FFMpegFormat(name='av1', flags='D ', description='AV1 Annex B', options=()),
    FFMpegFormat(name='avi', flags='D ', description='AVI (Audio Video Interleaved)', options=()),
    FFMpegFormat(name='avr', flags='D ', description='AVR (Audio Visual Research)', options=()),
    FFMpegFormat(name='avs', flags='D ', description='Argonaut Games Creature Shock', options=()),
    FFMpegFormat(name='avs2', flags='D ', description='raw AVS2-P2/IEEE1857.4', options=()),
    FFMpegFormat(name='avs3', flags='D ', description='raw AVS3-P2/IEEE1857.10', options=()),
    FFMpegFormat(name='bethsoftvid', flags='D ', description='Bethesda Softworks VID', options=()),
    FFMpegFormat(name='bfi', flags='D ', description='Brute Force & Ignorance', options=()),
    FFMpegFormat(name='bfstm', flags='D ', description='BFSTM (Binary Cafe Stream)', options=()),
    FFMpegFormat(name='bin', flags='D ', description='Binary text', options=()),
    FFMpegFormat(name='bink', flags='D ', description='Bink', options=()),
    FFMpegFormat(name='binka', flags='D ', description='Bink Audio', options=()),
    FFMpegFormat(name='bit', flags='D ', description='G.729 BIT file format', options=()),
    FFMpegFormat(name='bitpacked', flags='D ', description='Bitpacked', options=()),
    FFMpegFormat(name='bmp_pipe', flags='D ', description='piped bmp sequence', options=()),
    FFMpegFormat(name='bmv', flags='D ', description='Discworld II BMV', options=()),
    FFMpegFormat(name='boa', flags='D ', description='Black Ops Audio', options=()),
    FFMpegFormat(name='bonk', flags='D ', description='raw Bonk', options=()),
    FFMpegFormat(name='brender_pix', flags='D ', description='BRender PIX image', options=()),
    FFMpegFormat(name='brstm', flags='D ', description='BRSTM (Binary Revolution Stream)', options=()),
    FFMpegFormat(name='c93', flags='D ', description='Interplay C93', options=()),
    FFMpegFormat(name='caf', flags='D ', description='Apple CAF (Core Audio Format)', options=()),
    FFMpegFormat(name='cavsvideo', flags='D ', description='raw Chinese AVS (Audio Video Standard)', options=()),
    FFMpegFormat(name='cdg', flags='D ', description='CD Graphics', options=()),
    FFMpegFormat(name='cdxl', flags='D ', description='Commodore CDXL video', options=()),
    FFMpegFormat(name='cine', flags='D ', description='Phantom Cine', options=()),
    FFMpegFormat(name='codec2', flags='D ', description='codec2 .c2 demuxer', options=()),
    FFMpegFormat(name='codec2raw', flags='D ', description='raw codec2 demuxer', options=()),
    FFMpegFormat(name='concat', flags='D ', description='Virtual concatenation script', options=()),
    FFMpegFormat(name='cri_pipe', flags='D ', description='piped cri sequence', options=()),
    FFMpegFormat(name='dash', flags='D ', description='Dynamic Adaptive Streaming over HTTP', options=()),
    FFMpegFormat(name='data', flags='D ', description='raw data', options=()),
    FFMpegFormat(name='daud', flags='D ', description='D-Cinema audio', options=()),
    FFMpegFormat(name='dcstr', flags='D ', description='Sega DC STR', options=()),
    FFMpegFormat(name='dds_pipe', flags='D ', description='piped dds sequence', options=()),
    FFMpegFormat(name='derf', flags='D ', description='Xilam DERF', options=()),
    FFMpegFormat(name='dfa', flags='D ', description='Chronomaster DFA', options=()),
    FFMpegFormat(name='dfpwm', flags='D ', description='raw DFPWM1a', options=()),
    FFMpegFormat(name='dhav', flags='D ', description='Video DAV', options=()),
    FFMpegFormat(name='dirac', flags='D ', description='raw Dirac', options=()),
    FFMpegFormat(name='dnxhd', flags='D ', description='raw DNxHD (SMPTE VC-3)', options=()),
    FFMpegFormat(name='dpx_pipe', flags='D ', description='piped dpx sequence', options=()),
    FFMpegFormat(name='dsf', flags='D ', description='DSD Stream File (DSF)', options=()),
    FFMpegFormat(name='dsicin', flags='D ', description='Delphine Software International CIN', options=()),
    FFMpegFormat(name='dss', flags='D ', description='Digital Speech Standard (DSS)', options=()),
    FFMpegFormat(name='dts', flags='D ', description='raw DTS', options=()),
    FFMpegFormat(name='dtshd', flags='D ', description='raw DTS-HD', options=()),
    FFMpegFormat(name='dv', flags='D ', description='DV (Digital Video)', options=()),
    FFMpegFormat(name='dvbsub', flags='D ', description='raw dvbsub', options=()),
    FFMpegFormat(name='dvbtxt', flags='D ', description='dvbtxt', options=()),
    FFMpegFormat(name='dxa', flags='D ', description='DXA', options=()),
    FFMpegFormat(name='ea', flags='D ', description='Electronic Arts Multimedia', options=()),
    FFMpegFormat(name='ea_cdata', flags='D ', description='Electronic Arts cdata', options=()),
    FFMpegFormat(name='eac3', flags='D ', description='raw E-AC-3', options=()),
    FFMpegFormat(name='epaf', flags='D ', description='Ensoniq Paris Audio File', options=()),
    FFMpegFormat(name='evc', flags='D ', description='EVC Annex B', options=()),
    FFMpegFormat(name='exr_pipe', flags='D ', description='piped exr sequence', options=()),
    FFMpegFormat(name='f32be', flags='D ', description='PCM 32-bit floating-point big-endian', options=()),
    FFMpegFormat(name='f32le', flags='D ', description='PCM 32-bit floating-point little-endian', options=()),
    FFMpegFormat(name='f64be', flags='D ', description='PCM 64-bit floating-point big-endian', options=()),
    FFMpegFormat(name='f64le', flags='D ', description='PCM 64-bit floating-point little-endian', options=()),
    FFMpegFormat(name='fbdev', flags='D ', description='Linux framebuffer', options=()),
    FFMpegFormat(name='ffmetadata', flags='D ', description='FFmpeg metadata in text', options=()),
    FFMpegFormat(name='film_cpk', flags='D ', description='Sega FILM / CPK', options=()),
    FFMpegFormat(name='filmstrip', flags='D ', description='Adobe Filmstrip', options=()),
    FFMpegFormat(name='fits', flags='D ', description='Flexible Image Transport System', options=()),
    FFMpegFormat(name='flac', flags='D ', description='raw FLAC', options=()),
    FFMpegFormat(name='flic', flags='D ', description='FLI/FLC/FLX animation', options=()),
    FFMpegFormat(name='flv', flags='D ', description='FLV (Flash Video)', options=()),
    FFMpegFormat(name='frm', flags='D ', description='Megalux Frame', options=()),
    FFMpegFormat(name='fsb', flags='D ', description='FMOD Sample Bank', options=()),
    FFMpegFormat(name='fwse', flags='D ', description="Capcom's MT Framework sound", options=()),
    FFMpegFormat(name='g722', flags='D ', description='raw G.722', options=()),
    FFMpegFormat(name='g723_1', flags='D ', description='G.723.1', options=()),
    FFMpegFormat(name='g726', flags='D ', description='raw big-endian G.726 ("left aligned")', options=()),
    FFMpegFormat(name='g726le', flags='D ', description='raw little-endian G.726 ("right aligned")', options=()),
    FFMpegFormat(name='g729', flags='D ', description='G.729 raw format demuxer', options=()),
    FFMpegFormat(name='gdv', flags='D ', description='Gremlin Digital Video', options=()),
    FFMpegFormat(name='gem_pipe', flags='D ', description='piped gem sequence', options=()),
    FFMpegFormat(name='genh', flags='D ', description='GENeric Header', options=()),
    FFMpegFormat(name='gif', flags='D ', description='CompuServe Graphics Interchange Format (GIF)', options=()),
    FFMpegFormat(name='gif_pipe', flags='D ', description='piped gif sequence', options=()),
    FFMpegFormat(name='gsm', flags='D ', description='raw GSM', options=()),
    FFMpegFormat(name='gxf', flags='D ', description='GXF (General eXchange Format)', options=()),
    FFMpegFormat(name='h261', flags='D ', description='raw H.261', options=()),
    FFMpegFormat(name='h263', flags='D ', description='raw H.263', options=()),
    FFMpegFormat(name='h264', flags='D ', description='raw H.264 video', options=()),
    FFMpegFormat(name='hca', flags='D ', description='CRI HCA', options=()),
    FFMpegFormat(name='hcom', flags='D ', description='Macintosh HCOM', options=()),
    FFMpegFormat(name='hdr_pipe', flags='D ', description='piped hdr sequence', options=()),
    FFMpegFormat(name='hevc', flags='D ', description='raw HEVC video', options=()),
    FFMpegFormat(name='hls', flags='D ', description='Apple HTTP Live Streaming', options=()),
    FFMpegFormat(name='hnm', flags='D ', description='Cryo HNM v4', options=()),
    FFMpegFormat(name='ico', flags='D ', description='Microsoft Windows ICO', options=()),
    FFMpegFormat(name='idcin', flags='D ', description='id Cinematic', options=()),
    FFMpegFormat(name='idf', flags='D ', description='iCE Draw File', options=()),
    FFMpegFormat(name='iec61883', flags='D ', description='libiec61883 (new DV1394) A/V input device', options=()),
    FFMpegFormat(name='iff', flags='D ', description='IFF (Interchange File Format)', options=()),
    FFMpegFormat(name='ifv', flags='D ', description='IFV CCTV DVR', options=()),
    FFMpegFormat(name='ilbc', flags='D ', description='iLBC storage', options=()),
    FFMpegFormat(name='image2', flags='D ', description='image2 sequence', options=()),
    FFMpegFormat(name='image2pipe', flags='D ', description='piped image2 sequence', options=()),
    FFMpegFormat(name='imf', flags='D ', description='IMF (Interoperable Master Format)', options=()),
    FFMpegFormat(name='ingenient', flags='D ', description='raw Ingenient MJPEG', options=()),
    FFMpegFormat(name='ipmovie', flags='D ', description='Interplay MVE', options=()),
    FFMpegFormat(name='ipu', flags='D ', description='raw IPU Video', options=()),
    FFMpegFormat(name='ircam', flags='D ', description='Berkeley/IRCAM/CARL Sound Format', options=()),
    FFMpegFormat(name='iss', flags='D ', description='Funcom ISS', options=()),
    FFMpegFormat(name='iv8', flags='D ', description='IndigoVision 8000 video', options=()),
    FFMpegFormat(name='ivf', flags='D ', description='On2 IVF', options=()),
    FFMpegFormat(name='ivr', flags='D ', description='IVR (Internet Video Recording)', options=()),
    FFMpegFormat(name='j2k_pipe', flags='D ', description='piped j2k sequence', options=()),
    FFMpegFormat(name='jack', flags='D ', description='JACK Audio Connection Kit', options=()),
    FFMpegFormat(name='jacosub', flags='D ', description='JACOsub subtitle format', options=()),
    FFMpegFormat(name='jpeg_pipe', flags='D ', description='piped jpeg sequence', options=()),
    FFMpegFormat(name='jpegls_pipe', flags='D ', description='piped jpegls sequence', options=()),
    FFMpegFormat(name='jpegxl_anim', flags='D ', description='Animated JPEG XL', options=()),
    FFMpegFormat(name='jpegxl_pipe', flags='D ', description='piped jpegxl sequence', options=()),
    FFMpegFormat(name='jv', flags='D ', description='Bitmap Brothers JV', options=()),
    FFMpegFormat(name='kmsgrab', flags='D ', description='KMS screen capture', options=()),
    FFMpegFormat(name='kux', flags='D ', description='KUX (YouKu)', options=()),
    FFMpegFormat(name='kvag', flags='D ', description='Simon & Schuster Interactive VAG', options=()),
    FFMpegFormat(name='laf', flags='D ', description='LAF (Limitless Audio Format)', options=()),
    FFMpegFormat(name='lavfi', flags='D ', description='Libavfilter virtual input device', options=()),
    FFMpegFormat(name='libcdio', flags='D ', description='', options=()),
    FFMpegFormat(name='libdc1394', flags='D ', description='dc1394 v.2 A/V grab', options=()),
    FFMpegFormat(name='libgme', flags='D ', description='Game Music Emu demuxer', options=()),
    FFMpegFormat(name='libopenmpt', flags='D ', description='Tracker formats (libopenmpt)', options=()),
    FFMpegFormat(name='live_flv', flags='D ', description='live RTMP FLV (Flash Video)', options=()),
    FFMpegFormat(name='lmlm4', flags='D ', description='raw lmlm4', options=()),
    FFMpegFormat(name='loas', flags='D ', description='LOAS AudioSyncStream', options=()),
    FFMpegFormat(name='lrc', flags='D ', description='LRC lyrics', options=()),
    FFMpegFormat(name='luodat', flags='D ', description='Video CCTV DAT', options=()),
    FFMpegFormat(name='lvf', flags='D ', description='LVF', options=()),
    FFMpegFormat(name='lxf', flags='D ', description='VR native stream (LXF)', options=()),
    FFMpegFormat(name='m4v', flags='D ', description='raw MPEG-4 video', options=()),
    FFMpegFormat(name='mca', flags='D ', description='MCA Audio Format', options=()),
    FFMpegFormat(name='mcc', flags='D ', description='MacCaption', options=()),
    FFMpegFormat(name='mgsts', flags='D ', description='Metal Gear Solid: The Twin Snakes', options=()),
    FFMpegFormat(name='microdvd', flags='D ', description='MicroDVD subtitle format', options=()),
    FFMpegFormat(name='mjpeg', flags='D ', description='raw MJPEG video', options=()),
    FFMpegFormat(name='mjpeg_2000', flags='D ', description='raw MJPEG 2000 video', options=()),
    FFMpegFormat(name='mlp', flags='D ', description='raw MLP', options=()),
    FFMpegFormat(name='mlv', flags='D ', description='Magic Lantern Video (MLV)', options=()),
    FFMpegFormat(name='mm', flags='D ', description='American Laser Games MM', options=()),
    FFMpegFormat(name='mmf', flags='D ', description='Yamaha SMAF', options=()),
    FFMpegFormat(name='mods', flags='D ', description='MobiClip MODS', options=()),
    FFMpegFormat(name='moflex', flags='D ', description='MobiClip MOFLEX', options=()),
    FFMpegFormat(name='mp3', flags='D ', description='MP2/3 (MPEG audio layer 2/3)', options=()),
    FFMpegFormat(name='mpc', flags='D ', description='Musepack', options=()),
    FFMpegFormat(name='mpc8', flags='D ', description='Musepack SV8', options=()),
    FFMpegFormat(name='mpeg', flags='D ', description='MPEG-PS (MPEG-2 Program Stream)', options=()),
    FFMpegFormat(name='mpegts', flags='D ', description='MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegFormat(name='mpegtsraw', flags='D ', description='raw MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegFormat(name='mpegvideo', flags='D ', description='raw MPEG video', options=()),
    FFMpegFormat(name='mpjpeg', flags='D ', description='MIME multipart JPEG', options=()),
    FFMpegFormat(name='mpl2', flags='D ', description='MPL2 subtitles', options=()),
    FFMpegFormat(name='mpsub', flags='D ', description='MPlayer subtitles', options=()),
    FFMpegFormat(name='msf', flags='D ', description='Sony PS3 MSF', options=()),
    FFMpegFormat(name='msnwctcp', flags='D ', description='MSN TCP Webcam stream', options=()),
    FFMpegFormat(name='msp', flags='D ', description='Microsoft Paint (MSP))', options=()),
    FFMpegFormat(name='mtaf', flags='D ', description='Konami PS2 MTAF', options=()),
    FFMpegFormat(name='mtv', flags='D ', description='MTV', options=()),
    FFMpegFormat(name='mulaw', flags='D ', description='PCM mu-law', options=()),
    FFMpegFormat(name='musx', flags='D ', description='Eurocom MUSX', options=()),
    FFMpegFormat(name='mv', flags='D ', description='Silicon Graphics Movie', options=()),
    FFMpegFormat(name='mvi', flags='D ', description='Motion Pixels MVI', options=()),
    FFMpegFormat(name='mxf', flags='D ', description='MXF (Material eXchange Format)', options=()),
    FFMpegFormat(name='mxg', flags='D ', description='MxPEG clip', options=()),
    FFMpegFormat(name='nc', flags='D ', description='NC camera feed', options=()),
    FFMpegFormat(name='nistsphere', flags='D ', description='NIST SPeech HEader REsources', options=()),
    FFMpegFormat(name='nsp', flags='D ', description='Computerized Speech Lab NSP', options=()),
    FFMpegFormat(name='nsv', flags='D ', description='Nullsoft Streaming Video', options=()),
    FFMpegFormat(name='nut', flags='D ', description='NUT', options=()),
    FFMpegFormat(name='nuv', flags='D ', description='NuppelVideo', options=()),
    FFMpegFormat(name='obu', flags='D ', description='AV1 low overhead OBU', options=()),
    FFMpegFormat(name='ogg', flags='D ', description='Ogg', options=()),
    FFMpegFormat(name='oma', flags='D ', description='Sony OpenMG audio', options=()),
    FFMpegFormat(name='openal', flags='D ', description='OpenAL audio capture device', options=()),
    FFMpegFormat(name='osq', flags='D ', description='raw OSQ', options=()),
    FFMpegFormat(name='oss', flags='D ', description='OSS (Open Sound System) capture', options=()),
    FFMpegFormat(name='paf', flags='D ', description='Amazing Studio Packed Animation File', options=()),
    FFMpegFormat(name='pam_pipe', flags='D ', description='piped pam sequence', options=()),
    FFMpegFormat(name='pbm_pipe', flags='D ', description='piped pbm sequence', options=()),
    FFMpegFormat(name='pcx_pipe', flags='D ', description='piped pcx sequence', options=()),
    FFMpegFormat(name='pdv', flags='D ', description='PlayDate Video', options=()),
    FFMpegFormat(name='pfm_pipe', flags='D ', description='piped pfm sequence', options=()),
    FFMpegFormat(name='pgm_pipe', flags='D ', description='piped pgm sequence', options=()),
    FFMpegFormat(name='pgmyuv_pipe', flags='D ', description='piped pgmyuv sequence', options=()),
    FFMpegFormat(name='pgx_pipe', flags='D ', description='piped pgx sequence', options=()),
    FFMpegFormat(name='phm_pipe', flags='D ', description='piped phm sequence', options=()),
    FFMpegFormat(name='photocd_pipe', flags='D ', description='piped photocd sequence', options=()),
    FFMpegFormat(name='pictor_pipe', flags='D ', description='piped pictor sequence', options=()),
    FFMpegFormat(name='pjs', flags='D ', description='PJS (Phoenix Japanimation Society) subtitles', options=()),
    FFMpegFormat(name='pmp', flags='D ', description='Playstation Portable PMP', options=()),
    FFMpegFormat(name='png_pipe', flags='D ', description='piped png sequence', options=()),
    FFMpegFormat(name='pp_bnk', flags='D ', description='Pro Pinball Series Soundbank', options=()),
    FFMpegFormat(name='ppm_pipe', flags='D ', description='piped ppm sequence', options=()),
    FFMpegFormat(name='psd_pipe', flags='D ', description='piped psd sequence', options=()),
    FFMpegFormat(name='psxstr', flags='D ', description='Sony Playstation STR', options=()),
    FFMpegFormat(name='pulse', flags='D ', description='Pulse audio input', options=()),
    FFMpegFormat(name='pva', flags='D ', description='TechnoTrend PVA', options=()),
    FFMpegFormat(name='pvf', flags='D ', description='PVF (Portable Voice Format)', options=()),
    FFMpegFormat(name='qcp', flags='D ', description='QCP', options=()),
    FFMpegFormat(name='qdraw_pipe', flags='D ', description='piped qdraw sequence', options=()),
    FFMpegFormat(name='qoi_pipe', flags='D ', description='piped qoi sequence', options=()),
    FFMpegFormat(name='r3d', flags='D ', description='REDCODE R3D', options=()),
    FFMpegFormat(name='rawvideo', flags='D ', description='raw video', options=()),
    FFMpegFormat(name='realtext', flags='D ', description='RealText subtitle format', options=()),
    FFMpegFormat(name='redspark', flags='D ', description='RedSpark', options=()),
    FFMpegFormat(name='rka', flags='D ', description='RKA (RK Audio)', options=()),
    FFMpegFormat(name='rl2', flags='D ', description='RL2', options=()),
    FFMpegFormat(name='rm', flags='D ', description='RealMedia', options=()),
    FFMpegFormat(name='roq', flags='D ', description='id RoQ', options=()),
    FFMpegFormat(name='rpl', flags='D ', description='RPL / ARMovie', options=()),
    FFMpegFormat(name='rsd', flags='D ', description='GameCube RSD', options=()),
    FFMpegFormat(name='rso', flags='D ', description='Lego Mindstorms RSO', options=()),
    FFMpegFormat(name='rtp', flags='D ', description='RTP input', options=()),
    FFMpegFormat(name='rtsp', flags='D ', description='RTSP input', options=()),
    FFMpegFormat(name='s16be', flags='D ', description='PCM signed 16-bit big-endian', options=()),
    FFMpegFormat(name='s16le', flags='D ', description='PCM signed 16-bit little-endian', options=()),
    FFMpegFormat(name='s24be', flags='D ', description='PCM signed 24-bit big-endian', options=()),
    FFMpegFormat(name='s24le', flags='D ', description='PCM signed 24-bit little-endian', options=()),
    FFMpegFormat(name='s32be', flags='D ', description='PCM signed 32-bit big-endian', options=()),
    FFMpegFormat(name='s32le', flags='D ', description='PCM signed 32-bit little-endian', options=()),
    FFMpegFormat(name='s337m', flags='D ', description='SMPTE 337M', options=()),
    FFMpegFormat(name='s8', flags='D ', description='PCM signed 8-bit', options=()),
    FFMpegFormat(name='sami', flags='D ', description='SAMI subtitle format', options=()),
    FFMpegFormat(name='sap', flags='D ', description='SAP input', options=()),
    FFMpegFormat(name='sbc', flags='D ', description='raw SBC (low-complexity subband codec)', options=()),
    FFMpegFormat(name='sbg', flags='D ', description='SBaGen binaural beats script', options=()),
    FFMpegFormat(name='scc', flags='D ', description='Scenarist Closed Captions', options=()),
    FFMpegFormat(name='scd', flags='D ', description='Square Enix SCD', options=()),
    FFMpegFormat(name='sdns', flags='D ', description='Xbox SDNS', options=()),
    FFMpegFormat(name='sdp', flags='D ', description='SDP', options=()),
    FFMpegFormat(name='sdr2', flags='D ', description='SDR2', options=()),
    FFMpegFormat(name='sds', flags='D ', description='MIDI Sample Dump Standard', options=()),
    FFMpegFormat(name='sdx', flags='D ', description='Sample Dump eXchange', options=()),
    FFMpegFormat(name='ser', flags='D ', description='SER (Simple uncompressed video format for astronomical capturing)', options=()),
    FFMpegFormat(name='sga', flags='D ', description='Digital Pictures SGA', options=()),
    FFMpegFormat(name='sgi_pipe', flags='D ', description='piped sgi sequence', options=()),
    FFMpegFormat(name='shn', flags='D ', description='raw Shorten', options=()),
    FFMpegFormat(name='siff', flags='D ', description='Beam Software SIFF', options=()),
    FFMpegFormat(name='simbiosis_imx', flags='D ', description='Simbiosis Interactive IMX', options=()),
    FFMpegFormat(name='sln', flags='D ', description='Asterisk raw pcm', options=()),
    FFMpegFormat(name='smjpeg', flags='D ', description='Loki SDL MJPEG', options=()),
    FFMpegFormat(name='smk', flags='D ', description='Smacker', options=()),
    FFMpegFormat(name='smush', flags='D ', description='LucasArts Smush', options=()),
    FFMpegFormat(name='sol', flags='D ', description='Sierra SOL', options=()),
    FFMpegFormat(name='sox', flags='D ', description='SoX (Sound eXchange) native', options=()),
    FFMpegFormat(name='spdif', flags='D ', description='IEC 61937 (compressed data in S/PDIF)', options=()),
    FFMpegFormat(name='srt', flags='D ', description='SubRip subtitle', options=()),
    FFMpegFormat(name='stl', flags='D ', description='Spruce subtitle format', options=()),
    FFMpegFormat(name='subviewer', flags='D ', description='SubViewer subtitle format', options=()),
    FFMpegFormat(name='subviewer1', flags='D ', description='SubViewer v1 subtitle format', options=()),
    FFMpegFormat(name='sunrast_pipe', flags='D ', description='piped sunrast sequence', options=()),
    FFMpegFormat(name='sup', flags='D ', description='raw HDMV Presentation Graphic Stream subtitles', options=()),
    FFMpegFormat(name='svag', flags='D ', description='Konami PS2 SVAG', options=()),
    FFMpegFormat(name='svg_pipe', flags='D ', description='piped svg sequence', options=()),
    FFMpegFormat(name='svs', flags='D ', description='Square SVS', options=()),
    FFMpegFormat(name='swf', flags='D ', description='SWF (ShockWave Flash)', options=()),
    FFMpegFormat(name='tak', flags='D ', description='raw TAK', options=()),
    FFMpegFormat(name='tedcaptions', flags='D ', description='TED Talks captions', options=()),
    FFMpegFormat(name='thp', flags='D ', description='THP', options=()),
    FFMpegFormat(name='tiertexseq', flags='D ', description='Tiertex Limited SEQ', options=()),
    FFMpegFormat(name='tiff_pipe', flags='D ', description='piped tiff sequence', options=()),
    FFMpegFormat(name='tmv', flags='D ', description='8088flex TMV', options=()),
    FFMpegFormat(name='truehd', flags='D ', description='raw TrueHD', options=()),
    FFMpegFormat(name='tta', flags='D ', description='TTA (True Audio)', options=()),
    FFMpegFormat(name='tty', flags='D ', description='Tele-typewriter', options=()),
    FFMpegFormat(name='txd', flags='D ', description='Renderware TeXture Dictionary', options=()),
    FFMpegFormat(name='ty', flags='D ', description='TiVo TY Stream', options=()),
    FFMpegFormat(name='u16be', flags='D ', description='PCM unsigned 16-bit big-endian', options=()),
    FFMpegFormat(name='u16le', flags='D ', description='PCM unsigned 16-bit little-endian', options=()),
    FFMpegFormat(name='u24be', flags='D ', description='PCM unsigned 24-bit big-endian', options=()),
    FFMpegFormat(name='u24le', flags='D ', description='PCM unsigned 24-bit little-endian', options=()),
    FFMpegFormat(name='u32be', flags='D ', description='PCM unsigned 32-bit big-endian', options=()),
    FFMpegFormat(name='u32le', flags='D ', description='PCM unsigned 32-bit little-endian', options=()),
    FFMpegFormat(name='u8', flags='D ', description='PCM unsigned 8-bit', options=()),
    FFMpegFormat(name='usm', flags='D ', description='CRI USM', options=()),
    FFMpegFormat(name='v210', flags='D ', description='Uncompressed 4:2:2 10-bit', options=()),
    FFMpegFormat(name='v210x', flags='D ', description='Uncompressed 4:2:2 10-bit', options=()),
    FFMpegFormat(name='vag', flags='D ', description='Sony PS2 VAG', options=()),
    FFMpegFormat(name='vbn_pipe', flags='D ', description='piped vbn sequence', options=()),
    FFMpegFormat(name='vc1', flags='D ', description='raw VC-1', options=()),
    FFMpegFormat(name='vc1test', flags='D ', description='VC-1 test bitstream', options=()),
    FFMpegFormat(name='vidc', flags='D ', description='PCM Archimedes VIDC', options=()),
    FFMpegFormat(name='vividas', flags='D ', description='Vividas VIV', options=()),
    FFMpegFormat(name='vivo', flags='D ', description='Vivo', options=()),
    FFMpegFormat(name='vmd', flags='D ', description='Sierra VMD', options=()),
    FFMpegFormat(name='vobsub', flags='D ', description='VobSub subtitle format', options=()),
    FFMpegFormat(name='voc', flags='D ', description='Creative Voice', options=()),
    FFMpegFormat(name='vpk', flags='D ', description='Sony PS2 VPK', options=()),
    FFMpegFormat(name='vplayer', flags='D ', description='VPlayer subtitles', options=()),
    FFMpegFormat(name='vqf', flags='D ', description='Nippon Telegraph and Telephone Corporation (NTT) TwinVQ', options=()),
    FFMpegFormat(name='vvc', flags='D ', description='raw H.266/VVC video', options=()),
    FFMpegFormat(name='w64', flags='D ', description='Sony Wave64', options=()),
    FFMpegFormat(name='wady', flags='D ', description='Marble WADY', options=()),
    FFMpegFormat(name='wav', flags='D ', description='WAV / WAVE (Waveform Audio)', options=()),
    FFMpegFormat(name='wavarc', flags='D ', description='Waveform Archiver', options=()),
    FFMpegFormat(name='wc3movie', flags='D ', description='Wing Commander III movie', options=()),
    FFMpegFormat(name='webm_dash_manifest', flags='D ', description='WebM DASH Manifest', options=()),
    FFMpegFormat(name='webp_pipe', flags='D ', description='piped webp sequence', options=()),
    FFMpegFormat(name='webvtt', flags='D ', description='WebVTT subtitle', options=()),
    FFMpegFormat(name='wsaud', flags='D ', description='Westwood Studios audio', options=()),
    FFMpegFormat(name='wsd', flags='D ', description='Wideband Single-bit Data (WSD)', options=()),
    FFMpegFormat(name='wsvqa', flags='D ', description='Westwood Studios VQA', options=()),
    FFMpegFormat(name='wtv', flags='D ', description='Windows Television (WTV)', options=()),
    FFMpegFormat(name='wv', flags='D ', description='WavPack', options=()),
    FFMpegFormat(name='wve', flags='D ', description='Psion 3 audio', options=()),
    FFMpegFormat(name='x11grab', flags='D ', description='X11 screen capture, using XCB', options=()),
    FFMpegFormat(name='xa', flags='D ', description='Maxis XA', options=()),
    FFMpegFormat(name='xbin', flags='D ', description='eXtended BINary text (XBIN)', options=()),
    FFMpegFormat(name='xbm_pipe', flags='D ', description='piped xbm sequence', options=()),
    FFMpegFormat(name='xmd', flags='D ', description='Konami XMD', options=()),
    FFMpegFormat(name='xmv', flags='D ', description='Microsoft XMV', options=()),
    FFMpegFormat(name='xpm_pipe', flags='D ', description='piped xpm sequence', options=()),
    FFMpegFormat(name='xvag', flags='D ', description='Sony PS3 XVAG', options=()),
    FFMpegFormat(name='xwd_pipe', flags='D ', description='piped xwd sequence', options=()),
    FFMpegFormat(name='xwma', flags='D ', description='Microsoft xWMA', options=()),
    FFMpegFormat(name='yop', flags='D ', description='Psygnosis YOP', options=()),
    FFMpegFormat(name='yuv4mpegpipe', flags='D ', description='YUV4MPEG pipe', options=()),
  ])
# ---
# name: test_parse_codecs_help_text[muxers]
  list([
    FFMpegFormat(name='3g2', flags=' E', description='3GP2 (3GPP2 file format)', options=()),
    FFMpegFormat(name='3gp', flags=' E', description='3GP (3GPP file format)', options=()),
    FFMpegFormat(name='a64', flags=' E', description='a64 - video for Commodore 64', options=()),
    FFMpegFormat(name='ac3', flags=' E', description='raw AC-3', options=()),
    FFMpegFormat(name='ac4', flags=' E', description='raw AC-4', options=()),
    FFMpegFormat(name='adts', flags=' E', description='ADTS AAC (Advanced Audio Coding)', options=()),
    FFMpegFormat(name='adx', flags=' E', description='CRI ADX', options=()),
    FFMpegFormat(name='aiff', flags=' E', description='Audio IFF', options=()),
    FFMpegFormat(name='alaw', flags=' E', description='PCM A-law', options=()),
    FFMpegFormat(name='alp', flags=' E', description='LEGO Racers ALP', options=()),
    FFMpegFormat(name='alsa', flags=' E', description='ALSA audio output', options=()),
    FFMpegFormat(name='amr', flags=' E', description='3GPP AMR', options=()),
    FFMpegFormat(name='amv', flags=' E', description='AMV', options=()),
    FFMpegFormat(name='apm', flags=' E', description='Ubisoft Rayman 2 APM', options=()),
    FFMpegFormat(name='apng', flags=' E', description='Animated Portable Network Graphics', options=()),
    FFMpegFormat(name='aptx', flags=' E', description='raw aptX (Audio Processing Technology for Bluetooth)', options=()),
    FFMpegFormat(name='aptx_hd', flags=' E', description='raw aptX HD (Audio Processing Technology for Bluetooth)', options=()),
    FFMpegFormat(name='argo_asf', flags=' E', description='Argonaut Games ASF', options=()),
    FFMpegFormat(name='argo_cvg', flags=' E', description='Argonaut Games CVG', options=()),
    FFMpegFormat(name='asf', flags=' E', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegFormat(name='asf_stream', flags=' E', description='ASF (Advanced / Active Streaming Format)', options=()),
    FFMpegFormat(name='ass', flags=' E', description='SSA (SubStation Alpha) subtitle', options=()),
    FFMpegFormat(name='ast', flags=' E', description='AST (Audio Stream)', options=()),
    FFMpegFormat(name='au', flags=' E', description='Sun AU', options=()),
    FFMpegFormat(name='avi', flags=' E', description='AVI (Audio Video Interleaved)', options=()),
    FFMpegFormat(name='avif', flags=' E', description='AVIF', options=()),
    FFMpegFormat(name='avm2', flags=' E', description='SWF (ShockWave Flash) (AVM2)', options=()),
    FFMpegFormat(name='avs2', flags=' E', description='raw AVS2-P2/IEEE1857.4 video', options=()),
    FFMpegFormat(name='avs3', flags=' E', description='AVS3-P2/IEEE1857.10', options=()),
    FFMpegFormat(name='bit', flags=' E', description='G.729 BIT file format', options=()),
    FFMpegFormat(name='caca', flags=' E', description='caca (color ASCII art) output device', options=()),
    FFMpegFormat(name='caf', flags=' E', description='Apple CAF (Core Audio Format)', options=()),
    FFMpegFormat(name='cavsvideo', flags=' E', description='raw Chinese AVS (Audio Video Standard) video', options=()),
    FFMpegFormat(name='chromaprint', flags=' E', description='Chromaprint', options=()),
    FFMpegFormat(name='codec2', flags=' E', description='codec2 .c2 muxer', options=()),
    FFMpegFormat(name='codec2raw', flags=' E', description='raw codec2 muxer', options=()),
    FFMpegFormat(name='crc', flags=' E', description='CRC testing', options=()),
    FFMpegFormat(name='dash', flags=' E', description='DASH Muxer', options=()),
    FFMpegFormat(name='data', flags=' E', description='raw data', options=()),
    FFMpegFormat(name='daud', flags=' E', description='D-Cinema audio', options=()),
    FFMpegFormat(name='dfpwm', flags=' E', description='raw DFPWM1a', options=()),
    FFMpegFormat(name='dirac', flags=' E', description='raw Dirac', options=()),
    FFMpegFormat(name='dnxhd', flags=' E', description='raw DNxHD (SMPTE VC-3)', options=()),
    FFMpegFormat(name='dts', flags=' E', description='raw DTS', options=()),
    FFMpegFormat(name='dv', flags=' E', description='DV (Digital Video)', options=()),
    FFMpegFormat(name='dvd', flags=' E', description='MPEG-2 PS (DVD VOB)', options=()),
    FFMpegFormat(name='eac3', flags=' E', description='raw E-AC-3', options=()),
    FFMpegFormat(name='evc', flags=' E', description='raw EVC video', options=()),
    FFMpegFormat(name='f32be', flags=' E', description='PCM 32-bit floating-point big-endian', options=()),
    FFMpegFormat(name='f32le', flags=' E', description='PCM 32-bit floating-point little-endian', options=()),
    FFMpegFormat(name='f4v', flags=' E', description='F4V Adobe Flash Video', options=()),
    FFMpegFormat(name='f64be', flags=' E', description='PCM 64-bit floating-point big-endian', options=()),
    FFMpegFormat(name='f64le', flags=' E', description='PCM 64-bit floating-point little-endian', options=()),
    FFMpegFormat(name='fbdev', flags=' E', description='Linux framebuffer', options=()),
    FFMpegFormat(name='ffmetadata', flags=' E', description='FFmpeg metadata in text', options=()),
    FFMpegFormat(name='fifo', flags=' E', description='FIFO queue pseudo-muxer', options=()),
    FFMpegFormat(name='fifo_test', flags=' E', description='Fifo test muxer', options=()),
    FFMpegFormat(name='film_cpk', flags=' E', description='Sega FILM / CPK', options=()),
    FFMpegFormat(name='filmstrip', flags=' E', description='Adobe Filmstrip', options=()),
    FFMpegFormat(name='fits', flags=' E', description='Flexible Image Transport System', options=()),
    FFMpegFormat(name='flac', flags=' E', description='raw FLAC', options=()),
    FFMpegFormat(name='flv', flags=' E', description='FLV (Flash Video)', options=()),
    FFMpegFormat(name='framecrc', flags=' E', description='framecrc testing', options=()),
    FFMpegFormat(name='framehash', flags=' E', description='Per-frame hash testing', options=()),
    FFMpegFormat(name='framemd5', flags=' E', description='Per-frame MD5 testing', options=()),
    FFMpegFormat(name='g722', flags=' E', description='raw G.722', options=()),
    FFMpegFormat(name='g723_1', flags=' E', description='raw G.723.1', options=()),
    FFMpegFormat(name='g726', flags=' E', description='raw big-endian G.726 ("left-justified")', options=()),
    FFMpegFormat(name='g726le', flags=' E', description='raw little-endian G.726 ("right-justified")', options=()),
    FFMpegFormat(name='gif', flags=' E', description='CompuServe Graphics Interchange Format (GIF)', options=()),
    FFMpegFormat(name='gsm', flags=' E', description='raw GSM', options=()),
    FFMpegFormat(name='gxf', flags=' E', description='GXF (General eXchange Format)', options=()),
    FFMpegFormat(name='h261', flags=' E', description='raw H.261', options=()),
    FFMpegFormat(name='h263', flags=' E', description='raw H.263', options=()),
    FFMpegFormat(name='h264', flags=' E', description='raw H.264 video', options=()),
    FFMpegFormat(name='hash', flags=' E', description='Hash testing', options=()),
    FFMpegFormat(name='hds', flags=' E', description='HDS Muxer', options=()),
    FFMpegFormat(name='hevc', flags=' E', description='raw HEVC video', options=()),
    FFMpegFormat(name='hls', flags=' E', description='Apple HTTP Live Streaming', options=()),
    FFMpegFormat(name='ico', flags=' E', description='Microsoft Windows ICO', options=()),
    FFMpegFormat(name='ilbc', flags=' E', description='iLBC storage', options=()),
    FFMpegFormat(name='image2', flags=' E', description='image2 sequence', options=()),
    FFMpegFormat(name='image2pipe', flags=' E', description='piped image2 sequence', options=()),
    FFMpegFormat(name='ipod', flags=' E', description='iPod H.264 MP4 (MPEG-4 Part 14)', options=()),
    FFMpegFormat(name='ircam', flags=' E', description='Berkeley/IRCAM/CARL Sound Format', options=()),
    FFMpegFormat(name='ismv', flags=' E', description='ISMV/ISMA (Smooth Streaming)', options=()),
    FFMpegFormat(name='ivf', flags=' E', description='On2 IVF', options=()),
    FFMpegFormat(name='jacosub', flags=' E', description='JACOsub subtitle format', options=()),
    FFMpegFormat(name='kvag', flags=' E', description='Simon & Schuster Interactive VAG', options=()),
    FFMpegFormat(name='latm', flags=' E', description='LOAS/LATM', options=()),
    FFMpegFormat(name='lrc', flags=' E', description='LRC lyrics', options=()),
    FFMpegFormat(name='m4v', flags=' E', description='raw MPEG-4 video', options=()),
    FFMpegFormat(name='matroska', flags=' E', description='Matroska', options=()),
    FFMpegFormat(name='md5', flags=' E', description='MD5 testing', options=()),
    FFMpegFormat(name='microdvd', flags=' E', description='MicroDVD subtitle format', options=()),
    FFMpegFormat(name='mjpeg', flags=' E', description='raw MJPEG video', options=()),
    FFMpegFormat(name='mkvtimestamp_v2', flags=' E', description='extract pts as timecode v2 format, as defined by mkvtoolnix', options=()),
    FFMpegFormat(name='mlp', flags=' E', description='raw MLP', options=()),
    FFMpegFormat(name='mmf', flags=' E', description='Yamaha SMAF', options=()),
    FFMpegFormat(name='mov', flags=' E', description='QuickTime / MOV', options=()),
    FFMpegFormat(name='mp2', flags=' E', description='MP2 (MPEG audio layer 2)', options=()),
    FFMpegFormat(name='mp3', flags=' E', description='MP3 (MPEG audio layer 3)', options=()),
    FFMpegFormat(name='mp4', flags=' E', description='MP4 (MPEG-4 Part 14)', options=()),
    FFMpegFormat(name='mpeg', flags=' E', description='MPEG-1 Systems / MPEG program stream', options=()),
    FFMpegFormat(name='mpeg1video', flags=' E', description='raw MPEG-1 video', options=()),
    FFMpegFormat(name='mpeg2video', flags=' E', description='raw MPEG-2 video', options=()),
    FFMpegFormat(name='mpegts', flags=' E', description='MPEG-TS (MPEG-2 Transport Stream)', options=()),
    FFMpegFormat(name='mpjpeg', flags=' E', description='MIME multipart JPEG', options=()),
    FFMpegFormat(name='mulaw', flags=' E', description='PCM mu-law', options=()),
    FFMpegFormat(name='mxf', flags=' E', description='MXF (Material eXchange Format)', options=()),
    FFMpegFormat(name='mxf_d10', flags=' E', description='MXF (Material eXchange Format) D-10 Mapping', options=()),
    FFMpegFormat(name='mxf_opatom', flags=' E', description='MXF (Material eXchange Format) Operational Pattern Atom', options=()),
    FFMpegFormat(name='null', flags=' E', description='raw null video', options=()),
    FFMpegFormat(name='nut', flags=' E', description='NUT', options=()),
    FFMpegFormat(name='obu', flags=' E', description='AV1 low overhead OBU', options=()),
    FFMpegFormat(name='oga', flags=' E', description='Ogg Audio', options=()),
    FFMpegFormat(name='ogg', flags=' E', description='Ogg', options=()),
    FFMpegFormat(name='ogv', flags=' E', description='Ogg Video', options=()),
    FFMpegFormat(name='oma', flags=' E', description='Sony OpenMG audio', options=()),
    FFMpegFormat(name='opengl', flags=' E', description='OpenGL output', options=()),
    FFMpegFormat(name='opus', flags=' E', description='Ogg Opus', options=()),
    FFMpegFormat(name='oss', flags=' E', description='OSS (Open Sound System) playback', options=()),
    FFMpegFormat(name='psp', flags=' E', description='PSP MP4 (MPEG-4 Part 14)', options=()),
    FFMpegFormat(name='pulse', flags=' E', description='Pulse audio output', options=()),
    FFMpegFormat(name='rawvideo', flags=' E', description='raw video', options=()),
    FFMpegFormat(name='rm', flags=' E', description='RealMedia', options=()),
    FFMpegFormat(name='roq', flags=' E', description='raw id RoQ', options=()),
    FFMpegFormat(name='rso', flags=' E', description='Lego Mindstorms RSO', options=()),
    FFMpegFormat(name='rtp', flags=' E', description='RTP output', options=()),
    FFMpegFormat(name='rtp_mpegts', flags=' E', description='RTP/mpegts output format', options=()),
    FFMpegFormat(name='rtsp', flags=' E', description='RTSP output', options=()),
    FFMpegFormat(name='s16be', flags=' E', description='PCM signed 16-bit big-endian', options=()),
    FFMpegFormat(name='s16le', flags=' E', description='PCM signed 16-bit little-endian', options=()),
    FFMpegFormat(name='s24be', flags=' E', description='PCM signed 24-bit big-endian', options=()),
    FFMpegFormat(name='s24le', flags=' E', description='PCM signed 24-bit little-endian', options=()),
    FFMpegFormat(name='s32be', flags=' E', description='PCM signed 32-bit big-endian', options=()),
    FFMpegFormat(name='s32le', flags=' E', description='PCM signed 32-bit little-endian', options=()),
    FFMpegFormat(name='s8', flags=' E', description='PCM signed 8-bit', options=()),
    FFMpegFormat(name='sap', flags=' E', description='SAP output', options=()),
    FFMpegFormat(name='sbc', flags=' E', description='raw SBC', options=()),
    FFMpegFormat(name='scc', flags=' E', description='Scenarist Closed Captions', options=()),
    FFMpegFormat(name='segment', flags=' E', description='segment', options=()),
    FFMpegFormat(name='smjpeg', flags=' E', description='Loki SDL MJPEG', options=()),
    FFMpegFormat(name='smoothstreaming', flags=' E', description='Smooth Streaming Muxer', options=()),
    FFMpegFormat(name='sox', flags=' E', description='SoX (Sound eXchange) native', options=()),
    FFMpegFormat(name='spdif', flags=' E', description='IEC 61937 (used on S/PDIF - IEC958)', options=()),
    FFMpegFormat(name='spx', flags=' E', description='Ogg Speex', options=()),
    FFMpegFormat(name='srt', flags=' E', description='SubRip subtitle', options=()),
    FFMpegFormat(name='streamhash', flags=' E', description='Per-stream hash testing', options=()),
    FFMpegFormat(name='sup', flags=' E', description='raw HDMV Presentation Graphic Stream subtitles', options=()),
    FFMpegFormat(name='svcd', flags=' E', description='MPEG-2 PS (SVCD)', options=()),
    FFMpegFormat(name='swf', flags=' E', description='SWF (ShockWave Flash)', options=()),
    FFMpegFormat(name='tee', flags=' E', description='Multiple muxer tee', options=()),
    FFMpegFormat(name='truehd', flags=' E', description='raw TrueHD', options=()),
    FFMpegFormat(name='tta', flags=' E', description='TTA (True Audio)', options=()),
    FFMpegFormat(name='ttml', flags=' E', description='TTML subtitle', options=()),
    FFMpegFormat(name='u16be', flags=' E', description='PCM unsigned 16-bit big-endian', options=()),
    FFMpegFormat(name='u16le', flags=' E', description='PCM unsigned 16-bit little-endian', options=()),
    FFMpegFormat(name='u24be', flags=' E', description='PCM unsigned 24-bit big-endian', options=()),
    FFMpegFormat(name='u24le', flags=' E', description='PCM unsigned 24-bit little-endian', options=()),
    FFMpegFormat(name='u32be', flags=' E', description='PCM unsigned 32-bit big-endian', options=()),
    FFMpegFormat(name='u32le', flags=' E', description='PCM unsigned 32-bit little-endian', options=()),
    FFMpegFormat(name='u8', flags=' E', description='PCM unsigned 8-bit', options=()),
    FFMpegFormat(name='uncodedframecrc', flags=' E', description='uncoded framecrc testing', options=()),
    FFMpegFormat(name='vc1', flags=' E', description='raw VC-1 video', options=()),
    FFMpegFormat(name='vc1test', flags=' E', description='VC-1 test bitstream', options=()),
    FFMpegFormat(name='vcd', flags=' E', description='MPEG-1 Systems / MPEG program stream (VCD)', options=()),
    FFMpegFormat(name='vidc', flags=' E', description='PCM Archimedes VIDC', options=()),
    FFMpegFormat(name='vob', flags=' E', description='MPEG-2 PS (VOB)', options=()),
    FFMpegFormat(name='voc', flags=' E', description='Creative Voice', options=()),
    FFMpegFormat(name='vvc', flags=' E', description='raw H.266/VVC video', options=()),
    FFMpegFormat(name='w64', flags=' E', description='Sony Wave64', options=()),
    FFMpegFormat(name='wav', flags=' E', description='WAV / WAVE (Waveform Audio)', options=()),
    FFMpegFormat(name='webm', flags=' E', description='WebM', options=()),
    FFMpegFormat(name='webm_chunk', flags=' E', description='WebM Chunk Muxer', options=()),
    FFMpegFormat(name='webm_dash_manifest', flags=' E', description='WebM DASH Manifest', options=()),
    FFMpegFormat(name='webp', flags=' E', description='WebP', options=()),
    FFMpegFormat(name='webvtt', flags=' E', description='WebVTT subtitle', options=()),
    FFMpegFormat(name='wsaud', flags=' E', description='Westwood Studios audio', options=()),
    FFMpegFormat(name='wtv', flags=' E', description='Windows Television (WTV)', options=()),
    FFMpegFormat(name='wv', flags=' E', description='raw WavPack', options=()),
    FFMpegFormat(name='xv', flags=' E', description='XV (XVideo) output device', options=()),
    FFMpegFormat(name='yuv4mpegpipe', flags=' E', description='YUV4MPEG pipe', options=()),
  ])
# ---
